import "lot/schema.proto";
import "common/language.proto";
import "common/referenceduri.proto";
import "lot/volume.proto";

package apsara.odps.lot;

option java_outer_classname = "LanguageSourceProtos";

message LanguageSource 
{
    required Language Language = 1;
    repeated group Resources = 2
    {
        required string Project = 1;
        required string ResourceName = 2;
    };
    required string ClassName = 3;
    repeated ReferencedURI URIs= 4;
    required Schema Schema = 5;
    required uint32 InstanceCount = 6;
    repeated group Properties = 7
    {
        required string Key = 1;
        required string Value = 2;
    }
    repeated Volume Volumes = 8;
}
